--- a/src/Components/Modal.css
+++ b/src/Components/Modal.css
@@ -12,24 +12,26 @@
 
 .modal-content{
     position: absolute;
-    top: 47%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     line-height: 1.4;
-    background: #f1f1f1;
+    /* background: #f1f1f1; */
     padding: 14px 28px;
     border-radius: 3px;
-    max-width: 500px;
+    /* max-width: 500px; */
     min-width: 300px;
     
 }
 
-.close-modal{
+/* .close-modal{
+    color: papayawhip;
+    background-color: rgb(2, 11, 69);
     position: absolute;
     top: 10px;
     right: 10px;
     padding: 5px 7px;
-}
+} */
 
 
 p {
